--- a/ronni/package.json
+++ b/ronni/package.json
@@ -1,12 +1,14 @@
 {
   "name": "ronni",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  "author": "Ronni,
+  "repository": {
+    "url": "https://github.com/mogajptea/ronni"
   },
   "dependencies": {
     "react": "^18",
